--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -40,9 +40,13 @@ body header #nav nav .logo:active {
 }
 body header #nav nav label {
   float: right;
-  line-height: 60px;
+  line-height: 57px;
   font-size: 13px;
   cursor: pointer;
+  border: 1px dashed rgba(0, 0, 0, 0);
+}
+body header #nav nav label:focus {
+  border: 1px dashed black;
 }
 @media (max-width: 860px) {
   body header #nav nav label .all span {
@@ -80,7 +84,7 @@ body header #nav nav .hamburger {
 body header #nav nav .hamburger .list {
   position: absolute;
   display: flex;
-  left: 20%;
+  left: 15%;
 }
 body header #nav nav .hamburger .list label {
   display: none;
@@ -91,6 +95,10 @@ body header #nav nav .hamburger .list label li {
 @media (max-width: 1086px) {
   body header #nav nav .hamburger .list label {
     display: block;
+    border: 1px dashed rgba(0, 0, 0, 0);
+  }
+  body header #nav nav .hamburger .list label:active {
+    border: 1px dashed black;
   }
 }
 @media (max-width: 860px) {
@@ -108,8 +116,8 @@ body header #nav nav .hamburger .list .more {
   display: none;
   z-index: 2;
   position: absolute;
-  top: 60px;
-  right: -112px;
+  top: 58px;
+  right: -110px;
   width: 168px;
   border-bottom: 2px solid black;
 }
@@ -130,12 +138,12 @@ body header #nav nav .hamburger .list a {
   height: 50px;
   line-height: 60px;
   font-size: 13px;
-  padding: 0px 10px;
+  padding: 0px 20px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
 body header #nav nav .hamburger .list a:hover {
   text-decoration: underline;
-  text-decoration-thickness: 2px;
+  text-decoration-thickness: 3px;
   text-underline-offset: 6px;
 }
 body header #nav nav .hamburger .list a:active {
@@ -163,19 +171,21 @@ body header #nav nav .hamburger .list a:active {
   }
 }
 @media (max-width: 1086px) {
-  body header #nav nav .hamburger .list .xbox, body header #nav nav .hamburger .list .help {
+  body header #nav nav .hamburger .list .xbox,
+body header #nav nav .hamburger .list .help {
     display: none;
   }
 }
 @media (max-width: 860px) {
-  body header #nav nav .hamburger .list .xbox, body header #nav nav .hamburger .list .help {
+  body header #nav nav .hamburger .list .xbox,
+body header #nav nav .hamburger .list .help {
     display: block;
   }
 }
 body header #nav nav .hamburger .all-list {
   width: 75%;
   position: absolute;
-  top: 60px;
+  top: 58px;
   right: 10%;
   display: flex;
   flex-wrap: wrap;
@@ -192,6 +202,7 @@ body header #nav nav .hamburger .all-list ul label {
   line-height: normal;
   width: 100%;
   float: none;
+  border: none;
 }
 body header #nav nav .hamburger .all-list ul label li {
   font-size: 13px;
@@ -297,7 +308,7 @@ body header #nav nav .hamburger .all-list > a {
 @media (max-width: 860px) {
   body header #nav nav .hamburger {
     position: absolute;
-    top: 60px;
+    top: 58px;
     z-index: 2;
     width: 100%;
     display: none;
@@ -319,7 +330,7 @@ body header #nav nav .search-login .link a {
   color: #000;
   text-decoration: none;
 }
-body header #nav nav .search-login .link a:hover {
+body header #nav nav .search-login .link:not(:last-child) a:hover {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 5px;
@@ -329,10 +340,12 @@ body header #nav nav .search-login .link:active {
 }
 body header #nav nav .search-login .search {
   position: relative;
+  margin-right: 36px;
 }
 @media (max-width: 860px) {
   body header #nav nav .search-login .search {
     flex-grow: 1;
+    margin-right: 0px;
   }
 }
 body header #nav nav .search-login .search:hover::before {
@@ -346,7 +359,7 @@ body header #nav nav .search-login .search:hover::before {
   border: 1px solid rgba(0, 0, 0, 0.336);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2784313725);
   background-color: white;
-  z-index: 2;
+  z-index: 3;
 }
 @media (max-width: 860px) {
   body header #nav nav .search-login .search:hover::before {
@@ -367,7 +380,7 @@ body header #nav nav .search-login .shop:hover::before {
   border: 1px solid rgba(0, 0, 0, 0.336);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2784313725);
   background-color: white;
-  z-index: 2;
+  z-index: 3;
   text-align: center;
 }
 @media (max-width: 860px) {
@@ -405,6 +418,11 @@ body header #nav nav .search-login .login a img {
     display: flex;
     width: 90%;
     order: 1;
+  }
+}
+@media (max-width: 1450px) {
+  body header #nav nav {
+    padding: 0px 5%;
   }
 }
 @media (max-width: 1086px) {
