--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -52,9 +52,14 @@ body {
 
                 label {
                     float: right;
-                    line-height: 60px;
+                    line-height: 57px;
                     font-size: 13px;
                     cursor: pointer;
+                    border: 1px dashed rgba($color: #000000, $alpha: 0);
+
+                    &:focus {
+                        border: 1px dashed black;
+                    }
 
 
                     // display: none;
@@ -106,45 +111,58 @@ body {
                     .list {
                         position: absolute;
                         display: flex;
-                        left: 20%;
-                        label{
+                        left: 15%;
+
+                        label {
                             display: none;
-                            
-                            li{
+
+                            li {
                                 padding: 0px 10px;
                             }
+
                             @media (max-width:1086px) {
                                 display: block;
+                                border: 1px dashed rgba($color: #000000, $alpha: 0);
+
+                                &:active {
+                                    border: 1px dashed black;
+                                }
                             }
+
                             @media (max-width:860px) {
-                                
+
                                 display: none;
-                                    
-                                
-                                
+
+
+
                             }
                         }
-                        #more:checked~.more{
+
+                        #more:checked~.more {
                             display: block;
                         }
-                        #more:checked+label{
+
+                        #more:checked+label {
                             background: #e6e6e6;
                         }
-                        .more{
+
+                        .more {
                             display: none;
                             z-index: 2;
                             position: absolute;
-                            top: 60px;
-                            right: -112px;
+                            top: 58px;
+                            right: -110px;
                             width: 168px;
                             border-bottom: 2px solid black;
-                            a{
+
+                            a {
                                 line-height: normal;
                                 padding: 18px 0px 18px 24px;
                                 width: 100%;
                                 display: block;
                                 background: #e6e6e6;
-                                &:hover{
+
+                                &:hover {
                                     background-color: #d3d1d1;
                                     text-decoration: none;
                                 }
@@ -157,15 +175,15 @@ body {
                             height: 50px;
                             line-height: 60px;
                             font-size: 13px;
-                            padding: 0px 10px;
+                            padding: 0px 20px;
                             border: 1px solid rgba($color: #000000, $alpha: 0);
 
-                            
+
 
 
                             &:hover {
                                 text-decoration: underline;
-                                text-decoration-thickness: 2px;
+                                text-decoration-thickness: 3px;
                                 text-underline-offset: 6px;
 
                             }
@@ -173,7 +191,7 @@ body {
                             &:active {
                                 border: 1px dashed #000;
                             }
-                            
+
 
                             @media(max-width:860px) {
                                 position: static;
@@ -183,6 +201,7 @@ body {
                                 padding: 14px 24px 15px 15px;
                                 margin: 1px;
                                 border-bottom: 1px solid #e6e6e6;
+
                                 &:hover {
                                     text-decoration: none;
                                 }
@@ -193,22 +212,28 @@ body {
                             position: static;
                             display: block;
                             background-color: #f2f2f2;
-                            
+
 
                         }
+
                         @media (max-width:1086px) {
-                            .xbox,.help{
+
+                            .xbox,
+                            .help {
                                 display: none;
-                                
+
                             }
-                            
+
                         }
+
                         @media (max-width:860px) {
-                            .xbox,.help{
+
+                            .xbox,
+                            .help {
                                 display: block;
-                                
+
                             }
-                            
+
                         }
 
                     }
@@ -216,7 +241,7 @@ body {
                     .all-list {
                         width: 75%;
                         position: absolute;
-                        top: 60px;
+                        top: 58px;
                         right: 10%;
                         display: flex;
                         flex-wrap: wrap;
@@ -233,6 +258,7 @@ body {
                                 line-height: normal;
                                 width: 100%;
                                 float: none;
+                                border: none;
 
 
 
@@ -305,6 +331,7 @@ body {
 
                                     &:hover {
                                         text-decoration: underline;
+
                                         @media(max-width:860px) {
                                             text-decoration: none;
                                         }
@@ -359,7 +386,7 @@ body {
 
                     @media(max-width:860px) {
                         position: absolute;
-                        top: 60px;
+                        top: 58px;
                         z-index: 2;
                         width: 100%;
                         display: none;
@@ -386,16 +413,15 @@ body {
                         a {
                             color: #000;
                             text-decoration: none;
-
-                            &:hover {
-                                text-decoration: underline;
-                                text-decoration-thickness: 2px;
-                                text-underline-offset: 5px;
-
-                            }
+                            
+                        }
+                        &:not(:last-child) a:hover {
+                            text-decoration: underline;
+                            text-decoration-thickness: 2px;
+                            text-underline-offset: 5px;
 
                         }
-
+                        
                         &:active {
                             border: 1px dashed #000;
                         }
@@ -403,9 +429,11 @@ body {
 
                     .search {
                         position: relative;
+                        margin-right: 36px;
 
                         @media(max-width:860px) {
                             flex-grow: 1;
+                            margin-right: 0px;
                         }
 
                         &:hover::before {
@@ -419,7 +447,8 @@ body {
                             border: 1px solid rgba(0, 0, 0, 0.336);
                             box-shadow: 2px 2px 2px #00000047;
                             background-color: white;
-                            z-index: 2;
+                            z-index: 3;
+
                             @media (max-width:860px) {
                                 display: none;
                             }
@@ -430,6 +459,7 @@ body {
 
                     .shop {
                         position: relative;
+
                         &:hover::before {
                             content: "0個項目在購物車";
                             line-height: 20px;
@@ -441,9 +471,10 @@ body {
                             border: 1px solid rgba(0, 0, 0, 0.336);
                             box-shadow: 2px 2px 2px #00000047;
                             background-color: white;
-                            z-index: 2;
+                            z-index: 3;
                             text-align: center;
                         }
+
                         @media(max-width:860px) {
                             float: right;
                         }
@@ -487,6 +518,10 @@ body {
                         order: 1;
                     }
 
+                }
+
+                @media(max-width:1450px) {
+                    padding: 0px 5%;
                 }
 
                 @media(max-width:1086px) {
@@ -727,12 +762,12 @@ body {
                                 position: absolute;
                                 top: 15px;
                                 right: 5px;
-                                transition:all 0.5s;
+                                transition: all 0.5s;
                             }
 
                             &:hover::after {
                                 right: 0px;
-                                
+
 
                             }
 
@@ -964,7 +999,7 @@ body {
 
                                 &:hover {
                                     text-decoration: underline;
-                                
+
                                 }
 
 
@@ -979,7 +1014,7 @@ body {
                                 position: absolute;
                                 top: 0;
                                 right: -15px;
-                                transition:all 0.5s;
+                                transition: all 0.5s;
                             }
 
                             &:hover::after {
