--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -53,6 +53,12 @@ body header #nav nav label:focus {
     display: none;
   }
 }
+body header #nav nav label .all .menuX {
+  display: none;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+}
 body header #nav nav label .all .menu {
   display: none;
 }
@@ -138,7 +144,7 @@ body header #nav nav .hamburger .list a {
   height: 50px;
   line-height: 60px;
   font-size: 13px;
-  padding: 0px 20px;
+  padding: 0px 12px;
   border: 1px solid rgba(0, 0, 0, 0);
 }
 body header #nav nav .hamburger .list a:hover {
@@ -436,6 +442,12 @@ body header #nav nav .search-login .login a img {
     display: flex;
     flex-wrap: nowrap;
   }
+  body header #nav nav #check:checked + label > .all > .menuX {
+    display: block;
+  }
+  body header #nav nav #check:checked + label > .all > .menu {
+    display: none;
+  }
 }
 body main .banner {
   position: relative;
@@ -486,12 +498,12 @@ body main .banner .picture-word-shell .picture-word p:hover {
     width: 100%;
     background-color: white;
     padding: 48px;
-    box-shadow: 0px 0px 8px rgb(107, 107, 107);
+    box-shadow: 0px 0px 8px rgba(107, 107, 107, 0.438);
   }
 }
 @media (max-width: 860px) {
   body main .banner .picture-word-shell .picture-word {
-    box-shadow: 0px 4px 5px rgba(107, 107, 107, 0.39);
+    box-shadow: 0px 4px 5px rgba(107, 107, 107, 0.089);
   }
 }
 @media (max-width: 1086px) {
