--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -69,6 +69,13 @@ body {
                                 display: none;
                             }
                         }
+                        .menuX{
+                            display: none;
+                            font-size: 30px;
+                                // margin-left: 10px;
+                                width: 50px;
+                                text-align: center;
+                        }
 
                         .menu {
                             display: none;
@@ -89,9 +96,11 @@ body {
                 input {
                     display: none;
                 }
+                
 
                 #check:checked+label>div {
                     background-color: #f2f2f2;
+                    
                 }
 
                 #check:checked~div>.all-list {
@@ -175,7 +184,7 @@ body {
                             height: 50px;
                             line-height: 60px;
                             font-size: 13px;
-                            padding: 0px 20px;
+                            padding: 0px 12px;
                             border: 1px solid rgba($color: #000000, $alpha: 0);
 
 
@@ -532,7 +541,13 @@ body {
                     padding: 0%;
                     display: flex;
                     flex-wrap: nowrap;
-
+                    #check:checked+label>.all>.menuX{
+                        display: block;
+                        
+                    }
+                    #check:checked+label>.all>.menu{
+                        display: none;
+                    }
                 }
             }
 
@@ -604,12 +619,12 @@ body {
                         width: 100%;
                         background-color: white;
                         padding: 48px;
-                        box-shadow: 0px 0px 8px rgb(107, 107, 107);
+                        box-shadow: 0px 0px 8px rgba(107, 107, 107, 0.438);
                     }
 
                     @media(max-width:860px) {
 
-                        box-shadow: 0px 4px 5px rgba(107, 107, 107, 0.39);
+                        box-shadow: 0px 4px 5px rgba(107, 107, 107, 0.089);
                     }
                 }
 
