--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -22,6 +22,7 @@ body {
                 height: 60px;
                 // background-color: aqua;
                 padding: 0px 8%;
+                color: #262626;
 
 
                 .logo {
@@ -57,13 +58,12 @@ body {
                     cursor: pointer;
                     border: 1px dashed rgba($color: #000000, $alpha: 0);
 
-                    &:focus {
-                        border: 1px dashed black;
-                    }
+                   
 
 
                     // display: none;
                     .all {
+                
                         span {
                             @media(max-width:860px) {
                                 display: none;
@@ -96,7 +96,9 @@ body {
                 input {
                     display: none;
                 }
-                
+                #check:checked+label{
+                    border: 1px dashed black;
+                }
 
                 #check:checked+label>div {
                     background-color: #f2f2f2;
@@ -179,7 +181,7 @@ body {
                         }
 
                         a {
-                            color: #000;
+                            color: #262626;
                             text-decoration: none;
                             height: 50px;
                             line-height: 60px;
@@ -420,7 +422,7 @@ body {
                         border: 1px solid rgba($color: #000000, $alpha: 0);
 
                         a {
-                            color: #000;
+                            color: #262626;
                             text-decoration: none;
                             
                         }
@@ -439,6 +441,9 @@ body {
                     .search {
                         position: relative;
                         margin-right: 36px;
+                        i{
+                            color:#262626;
+                        }
 
                         @media(max-width:860px) {
                             flex-grow: 1;
@@ -468,6 +473,9 @@ body {
 
                     .shop {
                         position: relative;
+                        i{
+                            color:#262626;
+                        }
 
                         &:hover::before {
                             content: "0個項目在購物車";
@@ -689,8 +697,8 @@ body {
 
 
                 li {
-                    width: 200px;
                     height: 100px;
+                    padding: 0px 20px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-evenly;
@@ -705,7 +713,17 @@ body {
 
                     a {
                         color: #0067b8;
+                        position: relative;
                         font-weight: bold;
+                        &:active::before{
+                            content: "";
+                            border: 3px dotted #0067b8;
+                            position: absolute;
+                            left: -2px;
+                            top: -2px;
+                            width: 100%;
+                            height: 100%;
+                        }
                     }
                 }
 
@@ -787,6 +805,7 @@ body {
                             }
 
                             a {
+                                position: relative;
                                 font-size: 18px;
                                 color: #0067b8;
                                 text-decoration: none;
@@ -798,6 +817,15 @@ body {
 
                                 &:hover {
                                     text-decoration: underline;
+                                }
+                                &:active::before{
+                                    content: "";
+                                    border: 3px dotted #0067b8;
+                                    position: absolute;
+                                    left: -2px;
+                                    top: -2px;
+                                    width: calc(100% + 30px);
+                                    height: 100%;
                                 }
 
 
@@ -1004,7 +1032,7 @@ body {
                             position: relative;
 
                             a {
-
+                                position: relative;
                                 font-size: 18px;
                                 color: #0067b8;
                                 text-decoration: none;
@@ -1015,6 +1043,15 @@ body {
                                 &:hover {
                                     text-decoration: underline;
 
+                                }
+                                &:active::before{
+                                    content: "";
+                                    border: 3px dotted #0067b8;
+                                    position: absolute;
+                                    left: -2px;
+                                    top: -2px;
+                                    width: calc(100% + 25px);
+                                    height: 100%;
                                 }
 
 
@@ -1074,9 +1111,14 @@ body {
                     }
 
                     img {
-                        width: 32px;
-                        height: 32px;
+                        width: 38px;
+                        height: 38px;
                         cursor: pointer;
+                        border: 3px dashed #0068b800;
+                        &:active{
+                            border: 3px dotted #0067b8;
+                      
+                        }
                     }
                 }
 
@@ -1155,6 +1197,7 @@ body {
                     p {
                         padding: 30px 0px 8px 0px;
                         font-size: 15px;
+                        color: #616161;
                     }
 
                     li {
