--- a/css/microsoft.css
+++ b/css/microsoft.css
@@ -344,7 +344,7 @@ body header #nav nav .search-login .link a {
 }
 body header #nav nav .search-login .link:not(:last-child) a:hover {
   text-decoration: underline;
-  text-decoration-thickness: 2px;
+  text-decoration-thickness: 3px;
   text-underline-offset: 5px;
 }
 body header #nav nav .search-login .link:active {
@@ -964,6 +964,11 @@ body main .back .buttom a {
   color: #000;
   text-decoration: none;
 }
+@media (max-width: 1086px) {
+  body main .back .buttom {
+    right: 12px;
+  }
+}
 @media (max-width: 540px) {
   body main .back .buttom {
     width: 100%;
@@ -979,112 +984,112 @@ body main .back-box {
   width: 100%;
   height: 60px;
 }
-body main .footer {
+body footer .footer {
   width: 100%;
   background-color: #f2f2f2;
 }
-body main .footer .table {
+body footer .footer .table {
   width: 100%;
   padding: 0px 8%;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
-body main .footer .table .list {
+body footer .footer .table .list {
   width: calc(16.6666666667% - 10px);
   padding: 0px 5px;
 }
-body main .footer .table .list p {
+body footer .footer .table .list p {
   padding: 30px 0px 8px 0px;
   font-size: 15px;
   color: #616161;
 }
-body main .footer .table .list li {
+body footer .footer .table .list li {
   padding: 8px 0px;
   font-size: 11px;
 }
-body main .footer .table .list li a {
+body footer .footer .table .list li a {
   color: #616161;
   text-decoration: none;
 }
-body main .footer .table .list li a:hover {
+body footer .footer .table .list li a:hover {
   text-decoration: underline;
 }
 @media (max-width: 1086px) {
-  body main .footer .table .list {
+  body footer .footer .table .list {
     width: 33.3333333333%;
     padding: 0px;
   }
 }
 @media (max-width: 540px) {
-  body main .footer .table .list {
+  body footer .footer .table .list {
     width: 100%;
     padding: 0px;
   }
 }
-body main .footer .table .latest-trends {
+body footer .footer .table .latest-trends {
   padding-left: 0px;
 }
 @media (max-width: 1086px) {
-  body main .footer .table {
+  body footer .footer .table {
     padding: 0px 24px;
     flex-wrap: wrap;
   }
 }
-body main .footer .statement {
+body footer .footer .statement {
   padding: 0px 5%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-body main .footer .statement .earth {
+body footer .footer .statement .earth {
   font-size: 13px;
   margin-bottom: 16px;
 }
-body main .footer .statement .earth a {
+body footer .footer .statement .earth a {
   color: #616161;
   text-decoration: none;
 }
-body main .footer .statement .earth a:hover {
+body footer .footer .statement .earth a:hover {
   text-decoration: underline;
 }
 @media (max-width: 540px) {
-  body main .footer .statement .earth {
+  body footer .footer .statement .earth {
     margin-bottom: 24px;
   }
 }
-body main .footer .statement .microsoft-link ul {
+body footer .footer .statement .microsoft-link ul {
   display: flex;
 }
-body main .footer .statement .microsoft-link ul li {
+body footer .footer .statement .microsoft-link ul li {
   margin-right: 24px;
   margin-bottom: 20px;
   font-size: 11px;
 }
-body main .footer .statement .microsoft-link ul li a {
+body footer .footer .statement .microsoft-link ul li a {
   color: #616161;
   text-decoration: none;
 }
-body main .footer .statement .microsoft-link ul li a:hover {
+body footer .footer .statement .microsoft-link ul li a:hover {
   text-decoration: underline;
 }
 @media (max-width: 540px) {
-  body main .footer .statement .microsoft-link ul li {
+  body footer .footer .statement .microsoft-link ul li {
     margin-right: 5px;
   }
 }
 @media (max-width: 860px) {
-  body main .footer .statement .microsoft-link ul {
+  body footer .footer .statement .microsoft-link ul {
     flex-wrap: wrap;
   }
 }
 @media (max-width: 1086px) {
-  body main .footer .statement {
+  body footer .footer .statement {
     padding: 0px 24px 0px 24px;
   }
 }
 @media (max-width: 540px) {
-  body main .footer .statement {
+  body footer .footer .statement {
     padding: 0px 24px 20px;
     flex-direction: column;
   }
