--- a/scss/microsoft.scss
+++ b/scss/microsoft.scss
@@ -433,7 +433,7 @@ body {
                         }
                         &:not(:last-child) a:hover {
                             text-decoration: underline;
-                            text-decoration-thickness: 2px;
+                            text-decoration-thickness: 3px;
                             text-underline-offset: 5px;
 
                         }
@@ -1164,6 +1164,10 @@ body {
                     color: #000;
                     text-decoration: none;
                 }
+                @media(max-width:1086px) {
+                    right: 12px;
+
+                }
 
                 @media(max-width:540px) {
                     width: 100%;
@@ -1184,136 +1188,138 @@ body {
             height: 60px;
         }
 
+        
+    }
+    footer{
         .footer {
             width: 100%;
             background-color: #f2f2f2;
-
+    
             .table {
                 width: 100%;
                 padding: 0px 8%;
                 margin-bottom: 20px;
                 display: flex;
                 justify-content: space-between;
-
+    
                 .list {
                     width: calc(calc(100% / 6) - 10px);
                     padding: 0px 5px;
-
+    
                     p {
                         padding: 30px 0px 8px 0px;
                         font-size: 15px;
                         color: #616161;
                     }
-
+    
                     li {
                         padding: 8px 0px;
                         font-size: 11px;
-
+    
                         a {
                             color: #616161;
                             text-decoration: none;
-
+    
                             &:hover {
                                 text-decoration: underline;
                             }
                         }
                     }
-
+    
                     @media (max-width:1086px) {
                         width: calc(100% / 3);
                         padding: 0px;
                     }
-
+    
                     @media(max-width:540px) {
                         width: 100%;
                         padding: 0px;
                     }
                 }
-
+    
                 .latest-trends {
                     padding-left: 0px;
-
+    
                 }
-
+    
                 @media (max-width:1086px) {
                     padding: 0px 24px;
                     flex-wrap: wrap;
                 }
-
+    
             }
-
+    
             .statement {
                 padding: 0px 5%;
                 display: flex;
                 justify-content: space-between;
                 // padding-bottom: 20px;
                 flex-wrap: wrap;
-
+    
                 .earth {
                     font-size: 13px;
                     margin-bottom: 16px;
-
+    
                     a {
                         color: #616161;
                         text-decoration: none;
-
+    
                         &:hover {
                             text-decoration: underline;
                         }
                     }
-
+    
                     @media(max-width:540px) {
                         margin-bottom: 24px;
-
+    
                     }
                 }
-
+    
                 .microsoft-link {
                     ul {
-
+    
                         display: flex;
-
+    
                         li {
                             margin-right: 24px;
                             margin-bottom: 20px;
                             font-size: 11px;
-
+    
                             a {
                                 color: #616161;
                                 text-decoration: none;
-
+    
                                 &:hover {
                                     text-decoration: underline;
                                 }
                             }
-
+    
                             @media(max-width:540px) {
                                 margin-right: 5px;
-
-
+    
+    
                             }
                         }
-
+    
                         @media(max-width:860px) {
                             flex-wrap: wrap;
-
-
+    
+    
                         }
                     }
                 }
-
+    
                 @media (max-width:1086px) {
                     padding: 0px 24px 0px 24px;
                 }
-
+    
                 @media(max-width:540px) {
                     padding: 0px 24px 20px;
                     flex-direction: column;
-
+    
                 }
-
+    
             }
         }
-
     }
 }
